Include strain rate analysis in the methods

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -2105,3 +2105,48 @@
   pmid      = "20232465",
   doi       = "10.1002/jemt.20829"
 }
+
+@ARTICLE{Tseng2012-ni,
+  title     = "Spatial organization of the extracellular matrix regulates
+               cell-cell junction positioning",
+  author    = "Tseng, Qingzong and Duchemin-Pelletier, Eve and Deshiere,
+               Alexandre and Balland, Martial and Guillou, Hervé and Filhol,
+               Odile and Théry, Manuel",
+  abstract  = "The organization of cells into epithelium depends on cell
+               interaction with both the extracellular matrix (ECM) and
+               adjacent cells. The role of cell-cell adhesion in the regulation
+               of epithelial topology is well-described. ECM is better known to
+               promote cell migration and provide a structural scaffold for
+               cell anchoring, but its contribution to multicellular
+               morphogenesis is less well-understood. We developed a minimal
+               model system to investigate how ECM affects the spatial
+               organization of intercellular junctions. Fibronectin
+               micropatterns were used to constrain the location of cell-ECM
+               adhesion. We found that ECM affects the degree of stability of
+               intercellular junction positioning and the magnitude of intra-
+               and intercellular forces. Intercellular junctions were
+               permanently displaced, and experienced large perpendicular
+               tensional forces as long as they were positioned close to ECM.
+               They remained stable solely in regions deprived of ECM, where
+               they were submitted to lower tensional forces. The heterogeneity
+               of the spatial organization of ECM induced anisotropic
+               distribution of mechanical constraints in cells, which seemed to
+               adapt their position to minimize both intra- and intercellular
+               forces. These results uncover a morphogenetic role for ECM in
+               the mechanical regulation of cells and intercellular junction
+               positioning.",
+  journal   = "Proc. Natl. Acad. Sci. U. S. A.",
+  publisher = "Proceedings of the National Academy of Sciences",
+  volume    =  109,
+  number    =  5,
+  pages     = "1506--1511",
+  month     =  jan,
+  year      =  2012,
+  url       = "https://www.pnas.org/doi/abs/10.1073/pnas.1106377109",
+  keywords  = "Cephalic furrow mechanics",
+  language  = "en",
+  issn      = "0027-8424, 1091-6490",
+  pmid      = "22307605",
+  doi       = "10.1073/pnas.1106377109",
+  pmc       = "PMC3277177"
+}
