Rename title for repository reference

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -2062,7 +2062,7 @@
 }
 
 @MISC{Vellutini2023-hg,
-  title       = "Central repository of the cephalic furrow project",
+  title       = "Repository of the cephalic furrow project",
   author      = "Vellutini, Bruno C",
   abstract    = "This repository contains data, analyses, and supporting
                  information associated with our project about the role of the
