Add reference and personal communication for Lemke

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -2150,3 +2150,10 @@
   doi       = "10.1073/pnas.1106377109",
   pmc       = "PMC3277177"
 }
+
+@UNPUBLISHED{Lemke2023-cx,
+  title    = "Morphogenetic innovations in early fly development",
+  author   = "Lemke, Steffen",
+  year     =  2023,
+  keywords = "Cephalic furrow mechanics"
+}
