Update software citations

--- a/3-text/furrow.bib
+++ b/3-text/furrow.bib
@@ -9,11 +9,11 @@
   doi       = "10.1007/978-3-662-02454-6"
 }
 
-@MISC{R_Core_Team2022-ki,
+@MISC{R_Core_Team1993-ki,
   title     = "R: A language and environment for statistical computing",
   author    = "{R Core Team}",
   publisher = "R Foundation for Statistical Computing",
-  year      =  2022,
+  year      =  1993,
   url       = "http://www.r-project.org",
   keywords  = "Brachiopod wnt landscape;Cephalic furrow mechanics"
 }
@@ -1833,11 +1833,11 @@
   doi      = "10.1093/bioinformatics/btw413"
 }
 
-@MISC{RStudio_Team2022-wr,
+@MISC{RStudio_Team2011-wr,
   title       = "{RStudio}: Integrated Development Environment for {R}",
   author      = "{RStudio Team}",
   institution = "RStudio, PBC.",
-  year        =  2022,
+  year        =  2011,
   url         = "http://www.rstudio.com/",
   address     = "Boston, MA",
   keywords    = "Brachiopod wnt landscape;Cephalic furrow mechanics"
@@ -1976,10 +1976,10 @@
   pmc       = "PMC4460289"
 }
 
-@MISC{The_Inkscape_Project2022-ht,
+@MISC{The_Inkscape_Project2003-ht,
   title    = "Inkscape: Open Source Scalable Vector Graphics Editor",
   author   = "{The Inkscape Project}",
-  year     =  2022,
+  year     =  2003,
   url      = "https://inkscape.org",
   keywords = "Cephalic furrow mechanics"
 }
@@ -2156,4 +2156,17 @@
   author   = "Lemke, Steffen",
   year     =  2023,
   keywords = "Cephalic furrow mechanics"
+}
+
+@MISC{HandBrake_Team2003-fq,
+  title       = "{HandBrake}: {HandBrake's} main development repository",
+  author      = "{HandBrake Team}",
+  abstract    = "HandBrake's main development repository . Contribute to
+                 HandBrake/HandBrake development by creating an account on
+                 GitHub.",
+  institution = "Github",
+  year        =  2003,
+  url         = "https://github.com/HandBrake/HandBrake",
+  keywords    = "Cephalic furrow mechanics",
+  language    = "en"
 }
